syntax = "proto3";
package flyteidl.service;

option go_package = "github.com/flyteorg/flyte/flyteidl/gen/pb-go/flyteidl/service";
import "flyteidl/admin/agent.proto";

// AgentService defines an RPC Service that allows propeller to send the request to the agent server.
service AsyncAgentService {
  // Send a task create request to the agent server.
  rpc CreateTask (flyteidl.admin.CreateTaskRequest) returns (flyteidl.admin.CreateTaskResponse){};
  // Get job status.
  rpc GetTask (flyteidl.admin.GetTaskRequest) returns (flyteidl.admin.GetTaskResponse){};
  // Delete the task resource.
  rpc DeleteTask (flyteidl.admin.DeleteTaskRequest) returns (flyteidl.admin.DeleteTaskResponse){};
}

service SyncAgentService {
  // Do a job and get response from the agent server.
  rpc DoTask (flyteidl.admin.DoTaskRequest) returns (flyteidl.admin.DoTaskResponse){};
}
